--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>The Band</title>
     <link rel="icon" href="https://banner2.cleanpng.com/20191005/csc/transparent-celebrations-icon-musical-notes-symbols-icon-music-5d98acf9e8e603.725128211570286841954.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/reponsive.css">
+   <!--  <link rel="stylesheet" href="./assets/css/reponsive.css"> -->
     <link rel="stylesheet" href="./assets/css/themify-icons/themify-icons.css">
 </head>
 <body>
